add primeng styles

--- a/apps/my-ngpro/src/app/src/auth/login/login.component.html
+++ b/apps/my-ngpro/src/app/src/auth/login/login.component.html
@@ -1,13 +1,7 @@
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
+<p-card>
+  <div class="p-grid">
+    <div class="p-col-4">a</div>
+    <div class="p-col-4">a</div>
+    <div class="p-col-4">a</div>
+  </div>
+</p-card>
