--- a/apps/my-ngpro/src/app/src/auth/login/login.component.html
+++ b/apps/my-ngpro/src/app/src/auth/login/login.component.html
@@ -1,7 +1,24 @@
 <p-card>
   <div class="p-grid">
-    <div class="p-col-4">a</div>
-    <div class="p-col-4">a</div>
-    <div class="p-col-4">a</div>
-  </div>
+    <div class="p-col-4">
+      <label>username:</label><br/>
+      <input pInputText/>
+    </div>
+    <div class="p-col-4"></div>
+    <div class="p-col-4"></div>
+
+    <div class="p-col-4">
+      <label>password:</label><br/>
+      <input type="password" pInputText/>
+    </div>
+    <div class="p-col-4"></div>
+    <div class="p-col-4"></div>
+
+    <div class="p-col-4">
+      <p-button label="login"></p-button>
+    </div>
+    <div class="p-col-4"></div>
+    <div class="p-col-4"></div>
+
+    </div>
 </p-card>
