--- a/apps/my-ngpro/src/app/src/auth/login/login.component.html
+++ b/apps/my-ngpro/src/app/src/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <p-toast key="loginToast" position="top-center"></p-toast>
-<p-card>
+<p-card header="Login">
   <form [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
   <div class="p-grid">
     <div class="p-col-4">
